# coachdiary

./: .gitignore  createtestdata.py  manage.py  pyproject.toml  tasks.py
auth/users/: apps.py  models.py
auth/users/admin/: admin.py  forms.py
auth/users/api/: serializers.py  urls.py  utils.py  views.py
auth/users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_user_name.py
coachdiary/: asgi.py  settings.py  urls.py  wsgi.py
coachdiary/api/: urls.py
coachdiary/api/utils/: exception_handler.py  serializers.py
coachdiary/management/commands/: create_test_data.py  create_test_data_old.py
coachdiary/settings/: apps.py  general.py  rest_framework.py  settings.py
standards/: apps.py  models.py
standards/api/: filters.py  serializers.py  urls.py  views.py
standards/migrations/: 0001_initial.py  0002_alter_level_high_level_value_and_more.py  0003_alter_studentstandard_grade.py  0004_alter_studentstandard_grade.py  0005_alter_studentstandard_grade.py  0006_studentstandard_level.py  0007_alter_level_standard.py  0008_remove_level_deleted_at_remove_level_restored_at_and_more.py  0009_alter_studentstandard_level.py
standards/models/: __init__.py  base.py  standards.py
standarts/: admin.py  apps.py  models.py
standarts/migrations/: 0001_initial.py
