[tool.poetry]
name = "coachdiary"
version = "0.1.0"
description = ""
authors = ["Ivan Studinsky <ivan.studinsky@saritasa.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
invoke = "^2.2.0"
django-extensions = "^3.2.3"
djangorestframework = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
